<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- TODO: make recycler rtl -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="2dp"
        android:layoutDirection="rtl"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/toolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/pnu_medium"
            android:gravity="center"
            android:text="@string/main_toolbar_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_latest_programs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/pnu_medium"
                android:text="@string/latest_shows"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/slider_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/tv_today_shows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/pnu_medium"
                android:text="@string/today_s_shows"
                android:textColor="@color/gray"
                android:textSize="16sp" />


            <!-- TODO: add v21 to support elevation -->
            <!-- TODO: add loading and error messages -->

            <!--            <ProgressBar-->
            <!--                android:id="@+id/progressBar_slider"-->
            <!--                style="?android:attr/progressBarStyle"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:visibility="gone"-->
            <!--                app:layout_constraintBottom_toBottomOf="@+id/slider_recycler_view"-->
            <!--                app:layout_constraintEnd_toStartOf="@+id/right_guideline"-->
            <!--                app:layout_constraintStart_toStartOf="@+id/left_guideline"-->
            <!--                app:layout_constraintTop_toTopOf="@+id/slider_recycler_view" />-->

            <!--            <include-->
            <!--                android:id="@+id/layout_connection_error"-->
            <!--                layout="@layout/layout_connection_error"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="0dp"-->
            <!--                android:visibility="gone"-->
            <!--                app:layout_constraintBottom_toBottomOf="@+id/slider_recycler_view"-->
            <!--                app:layout_constraintEnd_toEndOf="@+id/slider_recycler_view"-->
            <!--                app:layout_constraintStart_toStartOf="@+id/slider_recycler_view"-->
            <!--                app:layout_constraintTop_toTopOf="@+id/slider_recycler_view" />-->


            <android.support.v7.widget.RecyclerView
                android:id="@+id/today_programs_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>